fixed flexbox alignment for menu main title

--- a/css/main.css
+++ b/css/main.css
@@ -1387,32 +1387,32 @@ p {
   /* END ICONS */
 }
 #post-854 .header-container {
-  background: red;
   display: flex;
   flex-direction: row;
 }
 #post-854 .header-container div {
-  font-size: 5em;
   text-transform: uppercase;
-  width: 50%;
-  flex: 6 0 1;
+  font-size: 8em;
 }
 #post-854 .header-container div:nth-child(1n) {
   text-align: left;
   font-family: 'Monotype Bernard W01';
   color: #000000;
+  flex: 50 0 0;
 }
 #post-854 .header-container div:nth-child(2n) {
   background: green;
-  flex: 5 0 1;
-  display: flex;
-  justify-content: center;
+  flex: 8 0 0;
+  background: url(/wp-content/uploads//2015/08/single-star.svg) no-repeat;
+  background-size: 93% 78%;
+  background-position: center center;
+  font-size: 5em;
 }
 #post-854 .header-container div:nth-child(3n) {
   text-align: right;
   font-family: 'Oswald', sans-serif;
   color: #000000;
-  background: pink;
+  flex: 46 0 0;
 }
 #post-854 .sides-container .two-cols {
   margin-left: 0 !important;
