--- a/css/page-specifics.less
+++ b/css/page-specifics.less
@@ -38,46 +38,43 @@ color: #333;
 		/* HEADER WRAPPER CONTAINER */
 
 		.header-container {
-			background:red;
+			//background:red;
 			display:flex;
 			flex-direction:row;
 
 
 			div {
-				font-size:5em;
 				text-transform: uppercase;
-				width:50%;
-				flex:6 0 1;
-			
-
-
-				
+				//flex:1 0 0;
+				font-size:8em;
+						
 
 				&:nth-child(1n) {
 					text-align:left;
 					font-family: 'Monotype Bernard W01';
 					color:#000000;
+					flex:50 0 0;
 					
-					
-
-				
 				}
 
 				&:nth-child(2n) {
 					background:green;
-					flex:5 0 1;
-					//flex-grow:2;
-					display:flex;
-					justify-content:center;
-
-
+					//display:flex;
+					//justify-content:center;
+					flex:8 0 0;
+					background: url(/wp-content/uploads//2015/08/single-star.svg) no-repeat;
+   					background-size: 93% 78%;
+    				background-position: center center;
+    				font-size:5em;
 				}
+
 
 				&:nth-child(3n) {
 					text-align:right;
 					font-family: 'Oswald', sans-serif;
 					color:#000000;
-					background:pink;
+					//background:pink;
+					flex: 46 0 0;
 				
 
 				}
